results/no_framework/humaneval/test_scripts/HumanEval-124_7.out
Error running code: closing parenthesis ')' does not match opening parenthesis '[' (<string>, line 27)
